dbeaver/dbeaver#17635 Keep original functions, data types and keyword… (#19706)
* dbeaver/dbeaver#17635 Keep original functions, data types and keywords case

* #17635 add more ClickHouse specific functions

---------

Co-authored-by: LonwoLonwo <anvolka@yandex.ru>
Co-authored-by: Dziyana <31996417+uslss@users.noreply.github.com>